--- a/cv.html
+++ b/cv.html
@@ -50,14 +50,17 @@
                 GitHub
               </a>
         
-              <!-- Mail -->
-              <a href="mailto:tunagokgoz19@gmail.com"
-                 class="flex items-center gap-2 border border-gray-400 text-gray-700 px-4 py-2 rounded hover:bg-gray-100 transition">
+              
+              <!-- Mail (onclick ile gizli) -->
+              <a href="#"
+                onclick="window.location.href='mailto:tunagokgoz19@gmail.com'"
+                  class="flex items-center gap-2 border border-gray-400 text-gray-700 px-4 py-2 rounded hover:bg-gray-100 transition">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-current" viewBox="0 0 24 24">
                   <path d="M2 4a2 2 0 012-2h16a2 2 0 012 2v.01L12 13 2 4.01V4zm0 2.236V20a2 2 0 002 2h16a2 2 0 002-2V6.236l-10 8.5-10-8.5z"/>
-                </svg>
+               </svg>
                 Email Me
               </a>
+
             </div>
           </div>
         </header>
