project card bağlantısı

--- a/projects.html
+++ b/projects.html
@@ -36,20 +36,23 @@
   </div>
 </section>
 
-<!-- 📦  PROJECT CARD  -->
+<!-- 📦  PROJECT CARD -->
 <section class="article07" id="article07-abcd-bank">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="card col-md-12 col-lg-10 shadow-lg rounded-4 overflow-hidden">
-        <div class="card-wrapper p-4 p-md-5">
 
-          <!-- kart başlığı -->
+      <div class="card col-md-12 col-lg-10 shadow-lg rounded-4 overflow-hidden position-relative">
+
+        <!-- 🔗 tıklanabilir katman -->
+        <a href="Angler-Exploit-Kit.html" class="stretched-link"></a>
+
+        <div class="card-wrapper p-4 p-md-5">
+          <!-- Başlık -->
           <h3 class="card-title display-6 fw-bold mb-4">
-            🕵️ Angler Exploit Kit - PCAP Network Forensics Case Study
+            🕵️ Angler Exploit Kit – PCAP Network Forensics Case Study
           </h3>
 
           <div class="row card-box align-left">
-
             <!-- 1. blok -->
             <div class="item col-12">
               <div class="item-wrapper">
@@ -59,12 +62,14 @@
                 </p>
               </div>
             </div>
-          </div> <!-- /.card-box -->
-        </div> <!-- /.card-wrapper -->
+          </div><!-- /.card-box -->
+        </div><!-- /.card-wrapper -->
       </div>
+
     </div>
   </div>
 </section>
+
 
 <!-- ⌛ PLACEHOLDER -->
 <section class="py-5">
