project car connection patch

--- a/projects.html
+++ b/projects.html
@@ -43,17 +43,20 @@
 
       <div class="card col-md-12 col-lg-10 shadow-lg rounded-4 overflow-hidden position-relative">
 
-        <!-- 🔗 tıklanabilir katman -->
-        <a href="Angler-Exploit-Kit.html" class="stretched-link"></a>
-
         <div class="card-wrapper p-4 p-md-5">
+
+          <!-- 🔗  STRETCHED LINK  — artık içinde görünmez span var -->
+          <a href="Angler-Exploit-Kit.html" class="stretched-link">
+            <span class="visually-hidden">Open Angler Exploit Kit project</span>
+          </a>
+
           <!-- Başlık -->
           <h3 class="card-title display-6 fw-bold mb-4">
             🕵️ Angler Exploit Kit – PCAP Network Forensics Case Study
           </h3>
 
+          <!-- İçerik -->
           <div class="row card-box align-left">
-            <!-- 1. blok -->
             <div class="item col-12">
               <div class="item-wrapper">
                 <h4 class="mbr-section-subtitle mb-3 fs-4 fw-semibold">Case Overview</h4>
@@ -63,12 +66,14 @@
               </div>
             </div>
           </div><!-- /.card-box -->
+
         </div><!-- /.card-wrapper -->
-      </div>
+      </div><!-- /.card -->
 
     </div>
   </div>
 </section>
+
 
 
 <!-- ⌛ PLACEHOLDER -->
