projects html vuln bağlantısı

--- a/projects.html
+++ b/projects.html
@@ -108,6 +108,43 @@
   </div>
 </section>
 
+<!-- PROJECT CARD -->
+<section class="article07" id="article07-abcd-bank">
+  <div class="container">
+    <div class="row justify-content-center">
+
+      <div class="card col-md-12 col-lg-10 shadow-lg rounded-4 overflow-hidden position-relative"
+           data-title="Vulnversity – TryHackMe CTF Walkthrough"
+           data-tags="ctf,web,walkthrough">
+        <div class="card-wrapper p-4 p-md-5">
+
+          <!-- stretched link -->
+          <a href="vulnversity.html" class="stretched-link">
+            <span class="visually-hidden">Open Angler Exploit Kit project</span>
+          </a>
+
+          <!-- başlık -->
+          <h3 class="card-title h4 fw-bold mb-4">
+            Vulnversity – TryHackMe CTF Walkthrough
+          </h3>
+
+          <!-- içerik -->
+          <div class="row card-box">
+            <div class="col-12">
+              <h4 class="h5 fw-semibold mb-2">Case Overview</h4>
+              <p class="mb-0">
+                This write-up covers my walkthrough of the Vulnversity CTF room on TryHackMe, aimed at building foundational skills in web exploitation
+              </p>
+            </div>
+          </div><!-- /.card-box -->
+
+        </div><!-- /.card-wrapper -->
+      </div><!-- /.card -->
+
+    </div>
+  </div>
+</section>
+
 <!-- PLACEHOLDER -->
 <section class="py-5">
   <div class="container">
