--- a/vulnversity.html
+++ b/vulnversity.html
@@ -25,7 +25,7 @@
           This write-up covers my walkthrough of the Vulnversity CTF room on TryHackMe, aimed at building foundational skills in web exploitation.
           Although this CTF is beginner-friendly, it provides an excellent foundation for those new to web exploitation. It walks you through the basics using essential tools and offers an enjoyable, hands-on experience that can be completed in about an hour.
         </p>
-        <p class="text-sm text-gray-500 mt-4"><strong>⚠️ Disclaimer:</strong> Flags and exploits shown here are for educational use only.</p>
+        <p class="text-sm text-gray-500 mt-4"><strong>⚠️ Disclaimer:</strong> SPOILER ALERT!</p>
       </header>
 
       <section id="nmap">
