--- a/cv.html
+++ b/cv.html
@@ -169,6 +169,7 @@
           <div class="flex flex-wrap gap-3 text-sm">
             <a class="skill-pill" data-tag="forensics">Forensics</a>
             <a class="skill-pill" data-tag="malware">Malware</a>
+            <a class="skill-pill" data-tag="Web-Exploitation">Web-Exploitation</a>
               <!-- Diğerleri… -->
           </div>
         </section>
